[package]
name = "csv_validate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "csv_validate"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
flate2 = "1.1.0"
pyo3 = "0.23.3"
regex = "1.11.1"
yaml-rust2 = "0.10.0"